selfsigned-issuer-issue-root-certificate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
