test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: harbor.127.0.0.1.traefik.me/library/cncf-demo:v0.0.1
      imagePullPolicy: IfNotPresent
  imagePullSecrets:
    - name: harbor-ca-cert
